<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="50dp"
        android:overScrollMode="never"
        android:scrollbars="none">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/username"
                android:theme="@style/AppThemeBase.TextInputLayout.Light"
                app:errorTextAppearance="@style/AppThemeBase.TextInputLayout.ErrorMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/green"
                android:theme="@style/AppThemeBase.TextInputLayout.Light"
                app:errorTextAppearance="@style/AppThemeBase.TextInputLayout.ErrorMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_username">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/green"
            android:theme="@style/AppThemeBase.Menu"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/login"
            app:titleTextColor="@color/white" />
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/dark_green"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />
</FrameLayout>