<resources>
    <string name="app_name">UtilDroid</string>
    <string name="first_fragment">First Fragment</string>
    <string name="nav_title_games">Games</string>
    <string name="nav_title_function">Functions</string>
    <string name="nav_title_bankcard">Bank Card</string>
    <string name="nav_title_rewards">Rewards</string>
    <string name="nav_title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_username">Invalid username</string>
    <string name="logout">Logout</string>
    <string name="general">General</string>
    <string name="nickname">Nickname</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="personal_info">Personal Info</string>
    <string name="email">Email</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="no_comments">No comments</string>
    <string name="comments">Comments</string>
</resources>
